[package]
name = "fakeinput"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
ffi = []

[dependencies]
strum = "0.17"
strum_macros = "0.17"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies.x11]
version = "2.18"
features = ["xlib", "xtest"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "impl-default"]
