[package]
name = "fakeinput"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@protonmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]

[features]
ffi = []

[dependencies]
strum = "0.17"
strum_macros = "0.17"

#TODO: only when feature ffi
[build-dependencies]
cbindgen = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies.x11]
version = "2.18"
features = ["xlib", "xtest"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "impl-default"]
